--- a/index.html
+++ b/index.html
@@ -20,6 +20,269 @@
 </head>
 
 <body>
+    <header class="container">
+        <!-- start nav -->
+        <nav class="navbar my-3 navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand fs-4 fw-bold" href="#">Tech Learn</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+                    aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarScroll">
+                    <ul class="navbar-nav me-auto my-2 ms-lg-5 text-lg-center my-lg-0 navbar-nav-scroll"
+                        style="--bs-scroll-height: 100px;">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Courses</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Courses</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="#">Deals</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="#">Success</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="#">Register</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+
+                        <button class="btn btn-outline-success" type="submit">Register</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+
+
+        <!-- end nav -->
+        <!-- start home -->
+
+        <section>
+            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <img src="image/cover/cover-1.png" class="d-block w-100 " alt="...">
+                        <div class="carousel-caption mb-lg-auto d-flex justify-content-center align-items-center">
+                            <div class="mb-lg-5">
+                                <h5 class="fs-1 fw-bolder">Get Started Digital Learning</h5>
+                                <p>Some representative placeholder content for the first slide.</p>
+                                <button class="btn btn-outline-primary">Get Started</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <img src="image/cover/cover-2.jpg" class="d-block w-100 " alt="...">
+                        <div class="carousel-caption mb-lg-auto d-flex justify-content-center align-items-center">
+                            <div class="mb-lg-5">
+                                <h5 class="fs-1 fw-bolder">Get Started Digital Learning</h5>
+                                <p>Some representative placeholder content for the first slide.</p>
+                                <button class="btn btn-outline-primary">Get Started</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="image/cover/cover-3.jpg" class="d-block w-100 " alt="...">
+                        <div class="carousel-caption mb-lg-auto d-flex justify-content-center align-items-center">
+                            <div class="mb-lg-5">
+                                <h5 class="fs-1 fw-bolder">Get Started Digital Learning</h5>
+                                <p>Some representative placeholder content for the first slide.</p>
+                                <button class="btn btn-outline-primary">Get Started</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <!-- end home -->
+    </header>
+
+    <main class="container">
+
+        <!-- course section -->
+        <section class=" my-5">
+            <h2 class="text-center">Discover Our Popular Courses</h2>
+            <p class="text-center">It is a long established fact that a reader will be distracted by the readable
+                content of a page when
+                looking at its layout.</p>
+            <div class="row my-5">
+                <div class="col-lg-6 gy-3">
+                    <div class="d-flex">
+                        <div>
+                            <img class="img-fluid" src="image/course/course-1.png" alt="">
+                        </div>
+                        <div class="ms-4">
+                            <h3 class="fs-5">Fundamental Of UI/UX Design</h3>
+                            <p class="fs-7 text-muted">Some quick example text to build on the card title and make up
+                                the bulk of
+                                the
+                                card.</p>
+                            <h5 class="text-danger fs-6 mt-3">Price : 20$</h5>
+                        </div>
+                    </div>
+
+                    <div class="d-flex">
+                        <div>
+                            <img class="img-fluid" src="image/course/course-2.png" alt="">
+                        </div>
+                        <div class="ms-4">
+                            <h3 class="fs-5">Fullstack Web Development</h3>
+                            <p class="fs-7 text-muted">Some quick example text to build on the card title and make up
+                                the bulk of
+                                the
+                                card.</p>
+                            <h5 class="text-danger fs-6 mt-3">Price : 20$</h5>
+                        </div>
+                    </div>
+
+                    <div class="d-flex">
+                        <div>
+                            <img class="img-fluid" src="image/course/course-3.png" alt="">
+                        </div>
+                        <div class="ms-4">
+                            <h3 class="fs-5">Photography Basic Rules</h3>
+                            <p class="fs-7 text-muted">Some quick example text to build on the card title and make up
+                                the bulk of
+                                the
+                                card.</p>
+                            <h5 class="text-danger fs-6 mt-3">Price : 20$</h5>
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <div class="col-lg-6 gy-3">
+                    <div class="d-flex">
+                        <div>
+                            <img class="img-fluid" src="image/course/course-4.png" alt="">
+                        </div>
+                        <div class="ms-4">
+                            <h3 class="fs-5">Javascript Basic to advanced</h3>
+                            <p class="fs-7 text-muted">Some quick example text to build on the card title and make up
+                                the bulk of
+                                the
+                                card.</p>
+                            <h5 class="text-danger fs-6 mt-3">Price : 20$</h5>
+                        </div>
+                    </div>
+
+
+                    <div class="d-flex">
+                        <div>
+                            <img class="img-fluid" src="image/course/course-5.png" alt="">
+                        </div>
+                        <div class="ms-4">
+                            <h3 class="fs-5">Digital Marketing</h3>
+                            <p class="fs-7 text-muted">Some quick example text to build on the card title and make up
+                                the bulk of
+                                the
+                                card.</p>
+                            <h5 class="text-danger fs-6 mt-3">Price : 20$</h5>
+                        </div>
+                    </div>
+
+                    <div class="d-flex">
+                        <div>
+                            <img class="img-fluid" src="image/course/course-6.png" alt="">
+                        </div>
+                        <div class="ms-4">
+                            <h3 class="fs-5">Motion Graphics</h3>
+                            <p class="fs-7 text-muted">Some quick example text to build on the card title and make up
+                                the bulk of
+                                the
+                                card.</p>
+                            <h5 class="text-danger fs-6 mt-3">Price : 20$</h5>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="text-center">
+                <Button class="btn btn-primary">See More Courses</Button>
+            </div>
+
+        </section>
+        <!-- end course sectino -->
+
+
+        <!-- start work -->
+        <section class="my-5">
+            <div class="row">
+                <div class="col-lg-5">
+                    <img class="img-fluid" src="image/working.png" alt="">
+                </div>
+                <div class="col-lg-7 d-flex align-items-center">
+                    <div>
+                        <h4>Explore The elearning Institute</h4>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
+                            alteration in some form, by injected humour, or randomised words which don't look even
+                            slightly
+                            believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.
+
+                            Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the
+                            Internet tend to repeat predefined.</p>
+
+                        <div class="d-flex align-items-center">
+                            <div>
+                                <h3>3.2k+</h3>
+                                <P>Online Course</P>
+                            </div>
+
+                            <div class="ms-3">
+                                <h3>600+</h3>
+                                <P>Expert Member</P>
+                            </div>
+
+                            <div class="ms-3">
+                                <h3>1k+</h3>
+                                <P>Rating Review</P>
+                            </div>
+
+                        </div>
+                        <button class="btn btn-primary">Read More</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end work -->
+    </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
