--- a/index.html
+++ b/index.html
@@ -266,6 +266,257 @@
             </div>
         </section>
         <!-- end work -->
+
+        <!-- ready to jhoin -->
+        <section class="bg-primary text-white p-5 rounded my-4">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h3>Ready to join?</h3>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout</p>
+                </div>
+                <div class="col-lg-6 d-flex align-items-center justify-content-center">
+
+
+                    <!-- modal -->
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-light text-primary fw-bolder" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal">
+                        Register Now
+                    </button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    ...
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary"
+                                        data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end ready -->
+
+        <!-- start succes -->
+        <section class="my-5">
+            <h3>Meet Our Successfull Students</h3>
+            <p>It is a long established fact that a reader will be distracted by the <br> readable content of a page
+                when
+                looking at its layout.</p>
+            <div class="row my-5">
+
+                <div class="col-lg-3">
+                    <img class="img-fluid" src="image/student/student-1.png" alt="">
+                    <h4 class="fs-7">Awlad Hossain</h4>
+                    <P class="text-muted">UI/UX Designer</P>
+                </div>
+
+                <div class="col-lg-3">
+                    <img class="img-fluid" src="image/student/student-2.png" alt="">
+                    <h4 class="fs-7">Jannatul Islam</h4>
+                    <P class="text-muted">Motion Designer</P>
+                </div>
+
+                <div class="col-lg-3">
+                    <img class="img-fluid" src="image/student/student-3.png" alt="">
+                    <h4 class="fs-7">Imran Hossain</h4>
+                    <P class="text-muted">Graphic Designer</P>
+                </div>
+
+                <div class="col-lg-3">
+                    <img class="img-fluid" src="image/student/student-4.png" alt="">
+                    <h4 class="fs-7">Rona Laila</h4>
+                    <P class="text-muted">UI/UX Designer</P>
+                </div>
+            </div>
+        </section>
+
+        <!-- end success -->
+        <section class="my-5">
+            <div class="text-center">
+                <h2>Some Students Feedback</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable content <br> of a page
+                    when
+                    looking at its layout.</p>
+            </div>
+            <div class="row g-3 my-4">
+                <div class="col-lg-6 border border-3 p-2">
+                    <div class="d-flex justify-content-between">
+                        <div>
+                            <img class="img-fluid" src="image/comma.png" alt="">
+                        </div>
+
+                        <div>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+
+                        </div>
+                    </div>
+                    <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even slightly
+                        believable. If you are going to use a passage of Lorem.</p>
+                    <div class="d-flex">
+                        <div>
+                            <img src="image/student/student-5.png" alt="">
+                        </div>
+                        <div>
+                            <h6> Awlad Hossain</h6>
+                            <p class="text-mutedd">UI/UX Designer</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 border border-3 p-2">
+                    <div class="d-flex justify-content-between">
+                        <div>
+                            <img class="img-fluid" src="image/comma.png" alt="">
+                        </div>
+
+                        <div>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+
+                        </div>
+                    </div>
+                    <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even slightly
+                        believable. If you are going to use a passage of Lorem.</p>
+                    <div class="d-flex">
+                        <div>
+                            <img src="image/student/student-6.png" alt="">
+                        </div>
+                        <div>
+                            <h6> Naima Islam</h6>
+                            <p class="text-mutedd">Grapgic Designer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- end review -->
+
+        <!-- start accordian  -->
+        <section class="mb-5">
+            <div class="text-center my-3">
+                <h2>Frequently Asked Questions</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page
+                    when
+                    looking at its layout.</p>
+            </div>
+
+            <div class=" my-6 accordion" id="accordionPanelsStayOpenExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                            aria-controls="panelsStayOpen-collapseOne">
+                            Accordion Item #1
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                        aria-labelledby="panelsStayOpen-headingOne">
+                        <div class="accordion-body">
+                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseTwo">
+                            Accordion Item #2
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingTwo">
+                        <div class="accordion-body">
+                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until
+                            the collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseThree">
+                            Accordion Item #3
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingThree">
+                        <div class="accordion-body">
+                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseTwo">
+                            Accordion Item #2
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingTwo">
+                        <div class="accordion-body">
+                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until
+                            the collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
     </main>
 
 
