--- a/index.html
+++ b/index.html
@@ -517,8 +517,41 @@
 
             </div>
         </section>
+
+        <!-- end accordian -->
+
+        <!-- start Companies -->
+        <section class="my-5">
+            <h2 class="text-center">Trusted by over 800+ companies</h2>
+            <div class="com d-flex justify-content-around align-items-center px-3 w-100 my-4">
+                <img class="img-fluid" src="image/company/company-1.png" alt="">
+                <img class="img-fluid" src="image/company/company-2.png" alt="">
+                <img class="img-fluid" src="image/company/company-3.png" alt="">
+                <img class="img-fluid" src="image/company/company-4.png" alt="">
+                <img class="img-fluid" src="image/company/company-5.png" alt="">
+                <img class="img-fluid" src="image/company/company-6.png" alt="">
+
+
+            </div>
+        </section>
+
+        <!-- end company -->
     </main>
 
+
+    <footer class="bg-dark text-white p-5 text-center">
+        <h2>TECH | LEARN</h2>
+        <p class="text-muted">Office 41, Zawaya Buildin, Ghala Muscat,<br>
+            Sultanate of Oman</p>
+        <span class="text-muted">Privacy Ploicy | Terms of use</span>
+
+        <div class="px-3 py-4 mx-3">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-google"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+        </div>
+    </footer>
 
 
 
