--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tech|World</title>
+    <title>Tech|Learn</title>
     <!-- fav icons -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- bootstrap -->
@@ -35,9 +35,7 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Courses</a>
-                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link" href="#">Courses</a>
                         </li>
@@ -56,7 +54,7 @@
                     </ul>
                     <form class="d-flex">
 
-                        <button class="btn btn-outline-success" type="submit">Register</button>
+                        <button class="btn btn-outline-primary" type="submit">Register</button>
                     </form>
                 </div>
             </div>
@@ -70,10 +68,10 @@
             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
 
                 <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="10000">
+                    <div class="carousel-item active " data-bs-interval="10000">
                         <img src="image/cover/cover-1.png" class="d-block w-100 " alt="...">
                         <div class="carousel-caption mb-lg-auto d-flex justify-content-center align-items-center">
-                            <div class="mb-lg-5">
+                            <div class="mb-lg-5 text">
                                 <h5 class="fs-1 fw-bolder">Get Started Digital Learning</h5>
                                 <p>Some representative placeholder content for the first slide.</p>
                                 <button class="btn btn-outline-primary">Get Started</button>
@@ -126,11 +124,11 @@
                 looking at its layout.</p>
             <div class="row my-5">
                 <div class="col-lg-6 gy-3">
-                    <div class="d-flex">
-                        <div>
-                            <img class="img-fluid" src="image/course/course-1.png" alt="">
+                    <div class="d-md-flex mb-md-3 mb-lg-0">
+                        <div class="text-center">
+                            <img class="img-fluid  w-100 " src="image/course/course-1.png" alt="">
                         </div>
-                        <div class="ms-4">
+                        <div class="ms-4 ">
                             <h3 class="fs-5">Fundamental Of UI/UX Design</h3>
                             <p class="fs-7 text-muted">Some quick example text to build on the card title and make up
                                 the bulk of
@@ -140,9 +138,9 @@
                         </div>
                     </div>
 
-                    <div class="d-flex">
-                        <div>
-                            <img class="img-fluid" src="image/course/course-2.png" alt="">
+                    <div class="d-md-flex mb-md-3 mb-lg-0">
+                        <div class="text-center">
+                            <img class="img-fluid  w-100" src="image/course/course-2.png" alt="">
                         </div>
                         <div class="ms-4">
                             <h3 class="fs-5">Fullstack Web Development</h3>
@@ -154,9 +152,9 @@
                         </div>
                     </div>
 
-                    <div class="d-flex">
-                        <div>
-                            <img class="img-fluid" src="image/course/course-3.png" alt="">
+                    <div class="d-md-flex">
+                        <div class="text-center">
+                            <img class="img-fluid  w-100" src="image/course/course-3.png" alt="">
                         </div>
                         <div class="ms-4">
                             <h3 class="fs-5">Photography Basic Rules</h3>
@@ -171,7 +169,7 @@
                 </div>
 
 
-                <div class="col-lg-6 gy-3">
+                <div class="col-lg-6 gy-3 d-none d-lg-block d-xl-none">
                     <div class="d-flex">
                         <div>
                             <img class="img-fluid" src="image/course/course-4.png" alt="">
@@ -228,10 +226,10 @@
         <!-- start work -->
         <section class="my-5">
             <div class="row">
-                <div class="col-lg-5">
+                <div class="col-lg-5 col-md-5">
                     <img class="img-fluid" src="image/working.png" alt="">
                 </div>
-                <div class="col-lg-7 d-flex align-items-center">
+                <div class="col-lg-7 col-md-7 d-flex align-items-center">
                     <div>
                         <h4>Explore The elearning Institute</h4>
                         <p>There are many variations of passages of Lorem Ipsum available, but the majority have
@@ -317,27 +315,27 @@
             <p>It is a long established fact that a reader will be distracted by the <br> readable content of a page
                 when
                 looking at its layout.</p>
-            <div class="row my-5">
+            <div class="row my-5 text-sm-center">
 
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-sm-12 col-md-6">
                     <img class="img-fluid" src="image/student/student-1.png" alt="">
                     <h4 class="fs-7">Awlad Hossain</h4>
                     <P class="text-muted">UI/UX Designer</P>
                 </div>
 
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-sm-12 col-md-6">
                     <img class="img-fluid" src="image/student/student-2.png" alt="">
                     <h4 class="fs-7">Jannatul Islam</h4>
                     <P class="text-muted">Motion Designer</P>
                 </div>
 
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-sm-12 col-md-6">
                     <img class="img-fluid" src="image/student/student-3.png" alt="">
                     <h4 class="fs-7">Imran Hossain</h4>
                     <P class="text-muted">Graphic Designer</P>
                 </div>
 
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-sm-12 col-md-6">
                     <img class="img-fluid" src="image/student/student-4.png" alt="">
                     <h4 class="fs-7">Rona Laila</h4>
                     <P class="text-muted">UI/UX Designer</P>
@@ -539,11 +537,11 @@
     </main>
 
 
-    <footer class="bg-dark text-white p-5 text-center">
+    <footer class="bg-dark text-white py-4 text-center">
         <h2>TECH | LEARN</h2>
-        <p class="text-muted">Office 41, Zawaya Buildin, Ghala Muscat,<br>
+        <p class="">Office 41, Zawaya Buildin, Ghala Muscat,<br>
             Sultanate of Oman</p>
-        <span class="text-muted">Privacy Ploicy | Terms of use</span>
+        <span class="fa-s">Privacy Ploicy | Terms of use</span>
 
         <div class="px-3 py-4 mx-3">
             <i class="fa-brands fa-facebook"></i>
