--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
 
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="image/cover/cover-1.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption  text-dark ">
+                        <img style="filter:brightness(50%);" src="image/cover/cover-1.png" class="d-block w-100"
+                            alt="...">
+                        <div class="carousel-caption">
                             <h5 class=" fs-2">Get Started Digital Learning</h5>
                             <p class="fs-6">It is a long established fact <span class="d-none d-md-block">
                                     that a reader
@@ -80,8 +81,9 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="image/cover/cover-2.jpg" class="d-block w-100 h-75" alt="...">
-                        <div class="carousel-caption  text-dark">
+                        <img style="filter:brightness(50%);" src="image/cover/cover-2.jpg" class="d-block w-100 h-75"
+                            alt="...">
+                        <div class="carousel-caption ">
                             <h5 class=" fs-1">Get Started Digital Learning</h5>
                             <p class="fs-6">It is a long established fact that a reader <span class="d-none d-md-block">
                                     will be distracted by the
@@ -91,8 +93,9 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="image/cover/cover-3.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption  text-dark">
+                        <img src="image/cover/cover-3.jpg" style="filter:brightness(50%);" class="d-block w-100"
+                            alt="...">
+                        <div class="carousel-caption">
                             <h5 class=" fs-1">Get Started Digital Learning</h5>
                             <p class="fs-6">It is a long established fact <span class="d-none d-md-block">
                                     that a reader will be distracted by the
@@ -351,8 +354,9 @@
                 <button class="btn btn-primary d-lg-none d-md-none text-center">View More</button>
             </div>
         </section>
-
         <!-- end success -->
+
+        <!-- start review -->
         <section class="my-5">
             <div class="text-center">
                 <h2>Some Students Feedback</h2>
@@ -425,7 +429,7 @@
         <!-- end review -->
 
         <!-- start accordian  -->
-        <section class="mb-5">
+        <section class="mb-5 ">
             <div class="text-center my-3">
                 <h2>Frequently Asked Questions</h2>
                 <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page
@@ -439,18 +443,15 @@
                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
                             data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
                             aria-controls="panelsStayOpen-collapseOne">
-                            Accordion Item #1
+                            Difference Between Flexbox and Grid?
                         </button>
                     </h2>
                     <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
                         aria-labelledby="panelsStayOpen-headingOne">
                         <div class="accordion-body">
-                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            Grid and flexbox. The basic difference between CSS Grid Layout and CSS Flexbox Layout is
+                            that flexbox was designed for layout in one dimension - either a row or a column. Grid was
+                            designed for two-dimensional layout - rows, and columns at the same time.
                         </div>
                     </div>
                 </div>
@@ -461,18 +462,16 @@
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
                             aria-controls="panelsStayOpen-collapseTwo">
-                            Accordion Item #2
+                            Difference Between bootstrap and tailwind?
                         </button>
                     </h2>
                     <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
                         aria-labelledby="panelsStayOpen-headingTwo">
                         <div class="accordion-body">
-                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until
-                            the collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            Bootstrap comes with a set of pre-styled responsive, mobile-first components that possess a
+                            definite UI kit. Tailwind CSS uses a set of utility classes to create a neat UI with more
+                            flexibility and uniqueness. Sites created using Bootstrap follow the generic pattern that
+                            makes them look identical.
                         </div>
                     </div>
                 </div>
@@ -483,18 +482,15 @@
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
                             aria-controls="panelsStayOpen-collapseThree">
-                            Accordion Item #3
+                            What is box model?
                         </button>
                     </h2>
                     <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
                         aria-labelledby="panelsStayOpen-headingThree">
                         <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            In the standard box model, if you give a box an inline-size and a block-size (or width and a
+                            height ) attributes, this defines the inline-size and block-size (width and height in
+                            horizontal languages) of the content box.
                         </div>
                     </div>
                 </div>
@@ -505,18 +501,15 @@
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
                             aria-controls="panelsStayOpen-collapseTwo">
-                            Accordion Item #2
+                            what is semantic tag?
                         </button>
                     </h2>
                     <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
                         aria-labelledby="panelsStayOpen-headingTwo">
                         <div class="accordion-body">
-                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until
-                            the collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            The HTML semantics refers to the tags that provide meaning to an HTML page rather than just
+                            presentation. It makes HTML more comprehensible by better defining the different sections
+                            and layout of web pages
                         </div>
                     </div>
                 </div>
@@ -526,7 +519,7 @@
         <!-- end accordian -->
 
         <!-- start Companies -->
-        <section class="my-5">
+        <section class="my-5 d-none d-lg-block">
             <h2 class="text-center">Trusted by over 800+ companies</h2>
             <div class="com d-flex justify-content-around align-items-center px-3 w-100 my-4">
                 <img class="img-fluid" src="image/company/company-1.png" alt="">
