finaly alhamdulillah done

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                 the bulk of
                                 the
                                 card.</p>
-                            <h5 class="text-danger fs-6 mt-3">Price : 20$</h5>
+                            <h5 class="text-danger fs-6">Price : 20$</h5>
                         </div>
                     </div>
 
@@ -233,11 +233,11 @@
 
         <!-- start work -->
         <section class="my-5">
-            <div class="row">
+            <div class="row g-0">
                 <div class="col-lg-5 col-md-5">
                     <img class="img-fluid" src="image/working.png" alt="">
                 </div>
-                <div class="col-lg-7 col-md-7 d-flex align-items-center">
+                <div class="col-lg-7 col-md-7 d-flex align-items-center px-3 work-data">
                     <div>
                         <h4>Explore The elearning Institute</h4>
                         <p>There are many variations of passages of Lorem Ipsum available, but the majority have
@@ -323,7 +323,7 @@
             <p>It is a long established fact that a reader will be distracted by the <br> readable content of a page
                 when
                 looking at its layout.</p>
-            <div class="row my-5 text-sm-center">
+            <div class="row my-4 text-center">
 
                 <div class="col-lg-3 col-sm-12 col-md-6">
                     <img class="img-fluid" src="image/student/student-1.png" alt="">
@@ -351,7 +351,7 @@
 
             </div>
             <div class="text-center">
-                <button class="btn btn-primary d-lg-none d-md-none text-center">View More</button>
+                <button class="btn btn-primary">View All</button>
             </div>
         </section>
         <!-- end success -->
@@ -539,9 +539,9 @@
     <!-- start footer -->
     <footer class="bg-dark text-white py-4 text-center">
         <h2>TECH | LEARN</h2>
-        <p class="">Office 41, Zawaya Buildin, Ghala Muscat,<br>
+        <p class="fs-7">Office 41, Zawaya Buildin, Ghala Muscat,<br>
             Sultanate of Oman</p>
-        <span class="fa-s">Privacy Ploicy | Terms of use</span>
+        <span class="fs-7">Privacy Ploicy | Terms of use</span>
 
         <div class="px-3 py-4 mx-3">
             <i class="fa-brands fa-facebook"></i>
