--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 </div>
 
 
-                <div class="col-lg-6 gy-3 d-none d-lg-block d-xl-none">
+                <div class="col-lg-6 gy-3 d-none d-lg-block">
                     <div class="d-flex">
                         <div>
                             <img class="img-fluid" src="image/course/course-4.png" alt="">
